<resources>
    <string name="app_name">Mortgage Payment Calculator</string>
    <string name="amount_hint">Enter amount</string>
    <string name="mortgage_principal_amount">Mortgage principal amount</string>
    <string name="amount_rate">Enter rate</string>
    <string name="interest_rate">Interest Rate (%)</string>
    <string name="term">Term</string>
    <string name="amortization">Amortization Period</string>
    <string name="calcPayment">Calculate</string>
    <string name="payment_frequency">*Default payment frequency is monthly.</string>
    <string name="your_payment">Your Monthly Payment</string>
    <string name="calc_text">Your monthly mortgage payment is:</string>
    <string name="term_length">Over X year term</string>
    <string-array name="term">
        <item>Select</item>
        <item>1 Year</item>
        <item>2 Years</item>
        <item>3 Years</item>
        <item>4 Years</item>
        <item>5 Years</item>
        <item>6 Years</item>
        <item>7 Years</item>
        <item>8 Years</item>
        <item>9 Years</item>
        <item>10 Years</item>
    </string-array>
    <string-array name="amortization">
        <item>Select</item>
        <item>1 Year</item>
        <item>2 Years</item>
        <item>3 Years</item>
        <item>4 Years</item>
        <item>5 Years</item>
        <item>6 Years</item>
        <item>7 Years</item>
        <item>8 Years</item>
        <item>9 Years</item>
        <item>10 Years</item>
        <item>11 Year</item>
        <item>12 Years</item>
        <item>13 Years</item>
        <item>14 Years</item>
        <item>15 Years</item>
        <item>16 Years</item>
        <item>17 Years</item>
        <item>18 Years</item>
        <item>19 Years</item>
        <item>20 Years</item>
        <item>21 Year</item>
        <item>22 Years</item>
        <item>23 Years</item>
        <item>24 Years</item>
        <item>25 Years</item>
        <item>26 Years</item>
        <item>27 Years</item>
        <item>28 Years</item>
        <item>29 Years</item>
        <item>30 Years</item>
    </string-array>
</resources>